--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 <body>
 
 <header>
+   <img src="https://scontent.fceb1-3.fna.fbcdn.net/v/t39.30808-6/518372258_710765455136704_8253547751420199239_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHZh3clHCbreaN-fTRvfVLvUMTFwRfBgkVQxMXBF8GCRR5d1hZNc-06147nQDW34LQZNUsujQxOI8m36EfKXlh8&_nc_ohc=jlzwzFDIZDUQ7kNvwE4KpQF&_nc_oc=AdmQkywOMf52OE8jnkLkwVdf3dDvevSWDF_OfJcSzgxKJVcDYzf72bmFzZjhXlVXI_U&_nc_zt=23&_nc_ht=scontent.fceb1-3.fna&_nc_gid=yyIc4bvDyYL2XI4MHYwchA&oh=00_AfT2z_IfIPvFHKwNteOLBHSQ0ljuFgQUbXHKbK9OZnrz_w&oe=6881932D" alt="Dan's DP" />
   <h1>Dan/dev</h1>
   <nav>
     <a href="#about">About</a>
@@ -128,7 +129,7 @@
 ShopTech is a custom backend e-commerce solution I developed to power my tech retail business, specializing in laptops and computer components. Designed with performance and reliability in mind, it includes secure user authentication, dynamic cart management, and straightforward inventory handling. The system is built using PHP, SQL, and JavaScript, ensuring compatibility with low-resource environments while remaining scalable for future growth.
 Every part of ShopTech was written from scratch to give me full control over how my products are managed, displayed, and sold. It’s more than code it’s the operational backbone for my business. Whether it's tracking laptop inventory, handling customer accounts, or optimizing system behavior for longer battery life and smoother use, ShopTech reflects my commitment to digital craftsmanship and practical commerce.
 
-If you’d like to include payment logic, admin controls, or hardware-specific sorting features (like filtering by RAM or processor type), I can help extend the description to cover those too.
+If you’d like to include payment logic, admin controls, or hardware-specific sorting features (like filtering by RAM or processor type).
 </p>
     </div>
     
