--- a/index.html
+++ b/index.html
@@ -153,11 +153,7 @@ To encourage consistent participation, EcoTac introduces a reward system where t
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/sql.png" alt="SQL"><h3>SQL</h3></div>
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/java-coffee-cup-logo.png" alt="Java"><h3>Java</h3></div>
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/python.png" alt="Python"><h3>Python</h3></div>
-    <div class="card">
-  <img src="https://img.icons8.com/officel/100/000000/react.png" alt="ReactJS">
-  <h3>ReactJS</h3>
-</div>
-
+    <div class="card"><img src="https://img.icons8.com/officel/100/000000/react.png" alt="ReactJS"><h3>ReactJS</h3></div>
     
   </div>
 </section>
