--- a/index.html
+++ b/index.html
@@ -145,15 +145,20 @@ To encourage consistent participation, EcoTac introduces a reward system where t
 
 <section id="tech">
   <h2 class="section-title">Tech Stack</h2>
+
+  <!-- Frontend Section -->
+  <h3 class="subheading">Frontend</h3>
   <div class="grid">
-    <!-- Frontend -->
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/html-5.png" alt="HTML"><h3>HTML</h3></div>
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/css3.png" alt="CSS"><h3>CSS</h3></div>
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/javascript-logo.png" alt="JavaScript"><h3>JavaScript</h3></div>
     <div class="card"><img src="https://img.icons8.com/officel/100/000000/react.png" alt="ReactJS"><h3>ReactJS</h3></div>
     <div class="card"><img src="https://img.icons8.com/windows/100/ffffff/nextjs.png" alt="Next.js"><h3>Next.js</h3></div>
+  </div>
 
-    <!-- Backend -->
+  <!-- Backend Section -->
+  <h3 class="subheading">Backend</h3>
+  <div class="grid">
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/php-logo.png" alt="PHP"><h3>PHP</h3></div>
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/sql.png" alt="SQL"><h3>SQL</h3></div>
     <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/nodejs.png" alt="Node.js"><h3>Node.js</h3></div>
