--- a/index.html
+++ b/index.html
@@ -48,19 +48,28 @@
       gap: 20px;
     }
     .card {
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.15);
-      text-align: center;
-    }
-    .card img {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 15px;
-      object-fit: contain;
-      filter: grayscale(100%) contrast(1.2);
-    }
+  background-color: #111;
+  border-radius: 10px;
+  padding: 1rem;
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card img {
+  max-width: 60px;
+  margin-bottom: 0.5rem;
+}
+
+.card h3 {
+  color: #fff;
+  font-size: 1rem;
+  margin: 0;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 15px rgba(0, 255, 255, 0.6);
+}
     input, textarea {
       width: 100%;
       background: #222;
@@ -90,10 +99,20 @@
       padding: 30px 10px;
       box-shadow: 0 -2px 10px #fff inset;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+    @keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.card {
+  animation: fadeInUp 0.6s ease forwards;
+}
   </style>
 </head>
 <body>
