--- a/index.html
+++ b/index.html
@@ -113,6 +113,31 @@
 .card {
   animation: fadeInUp 0.6s ease forwards;
 }
+    .project-card {
+  background: #111;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 0 15px rgba(0,255,255,0.1);
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 20px rgba(0,255,255,0.6);
+}
+
+.btn {
+  background: #00ffff;
+  color: #000;
+  padding: 10px 20px;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: background 0.3s ease;
+}
+
+.btn:hover {
+  background: #00ff99;
+}
   </style>
 </head>
 <body>
