--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
 .card img {
-  max-width: 60px;
-  margin-bottom: 0.5rem;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
-
 .card h3 {
   color: #fff;
   font-size: 1rem;
