--- a/index.html
+++ b/index.html
@@ -130,8 +130,14 @@
 
 <section id="about">
   <h2 class="section-title">About Me</h2>
-  <div class="card">
-<p>Hi, I'm Dan — a BSIT student at Leyte Normal University with a growing passion for building responsive web systems and refining backend functionalities. I'm continuously learning and exploring how to make digital experiences smoother and more meaningful.</p>
+  <div class="card" style="background:#111; padding: 30px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,255,255,0.2); max-width: 800px; margin: auto;">
+    <p style="font-size: 1.1em; line-height: 1.6; color: #ddd;">
+      I’m currently a student at <strong>Leyte Normal University</strong>, diving deep into web development and system design. I enjoy combining logic with creativity—especially on projects that aim for real-world impact. Whether I’m building backend systems or designing glowing UI effects, I approach every challenge methodically.
+      <br><br>
+      One technique I rely on is <strong>pseudocode</strong>—it helps me map out ideas clearly before coding and has become essential to my problem-solving workflow. I’ve always been fascinated by what’s happening under the hood—from system-level programming to cybersecurity—and I find real meaning in creating tools that serve communities.
+      <br><br>
+      Recently, I’ve been building <strong>EcoTac</strong>, a Progressive Web App for environmental engagement, and <strong>ShopTech</strong>, an e-commerce system featuring secure login and dynamic cart functionality. These projects taught me to be both flexible and precise—balancing performance, user experience, and mission-driven design.
+    </p>
   </div>
 </section>
 
