--- a/index.html
+++ b/index.html
@@ -115,17 +115,28 @@
 </head>
 <body>
 
-<header>
-   <img src="https://scontent.fceb1-3.fna.fbcdn.net/v/t39.30808-6/518372258_710765455136704_8253547751420199239_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHZh3clHCbreaN-fTRvfVLvUMTFwRfBgkVQxMXBF8GCRR5d1hZNc-06147nQDW34LQZNUsujQxOI8m36EfKXlh8&_nc_ohc=jlzwzFDIZDUQ7kNvwE4KpQF&_nc_oc=AdmQkywOMf52OE8jnkLkwVdf3dDvevSWDF_OfJcSzgxKJVcDYzf72bmFzZjhXlVXI_U&_nc_zt=23&_nc_ht=scontent.fceb1-3.fna&_nc_gid=yyIc4bvDyYL2XI4MHYwchA&oh=00_AfT2z_IfIPvFHKwNteOLBHSQ0ljuFgQUbXHKbK9OZnrz_w&oe=6881932D" alt="Dan's DP" />
-  <h1>Dan/dev</h1>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#tech">Tech Stack</a>
-    <a href="#experience">Experience</a>
-    <a href="#education">Education</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<header style="background: #111; padding: 60px 30px;">
+  <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 40px; max-width: 1000px; margin: auto;">
+    
+    <!-- Profile Image -->
+    <img src="https://scontent.fceb1-3.fna.fbcdn.net/v/t39.30808-6/518372258_710765455136704_8253547751420199239_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHZh3clHCbreaN-fTRvfVLvUMTFwRfBgkVQxMXBF8GCRR5d1hZNc-06147nQDW34LQZNUsujQxOI8m36EfKXlh8&_nc_ohc=jlzwzFDIZDUQ7kNvwE4KpQF&_nc_oc=AdmQkywOMf52OE8jnkLkwVdf3dDvevSWDF_OfJcSzgxKJVcDYzf72bmFzZjhXlVXI_U&_nc_zt=23&_nc_ht=scontent.fceb1-3.fna&_nc_gid=yyIc4bvDyYL2XI4MHYwchA&oh=00_AfT2z_IfIPvFHKwNteOLBHSQ0ljuFgQUbXHKbK9OZnrz_w&oe=6881932D"
+         alt="Dan's Profile Photo"
+         style="width: 160px; height: 160px; object-fit: cover; border-radius: 50%; box-shadow: 0 0 15px rgba(0,255,255,0.5);">
+
+    <!-- Text Content -->
+    <div style="text-align: left; max-width: 600px;">
+      <h1 style="font-size: 3em; margin: 0; text-shadow: 0 0 15px #00ffff;">Dan/dev</h1>
+      <nav style="margin-top: 25px;">
+        <a href="#about" style="margin-right: 20px; color: #fff; text-decoration: none;">About</a>
+        <a href="#projects" style="margin-right: 20px; color: #fff; text-decoration: none;">Projects</a>
+        <a href="#tech" style="margin-right: 20px; color: #fff; text-decoration: none;">Tech Stack</a>
+        <a href="#experience" style="margin-right: 20px; color: #fff; text-decoration: none;">Experience</a>
+        <a href="#education" style="margin-right: 20px; color: #fff; text-decoration: none;">Education</a>
+        <a href="#contact" style="color: #fff; text-decoration: none;">Contact</a>
+      </nav>
+    </div>
+
+  </div>
 </header>
 
 <section id="about">
