--- a/index.html
+++ b/index.html
@@ -43,43 +43,45 @@
       text-shadow: 0 0 10px #fff;
     }
     .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .card {
-  background-color: #111;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 25px;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.card {
+  background: #111;
+  padding: 20px;
   border-radius: 10px;
-  padding: 1rem;
-  text-align: center;
+  box-shadow: 0 0 12px rgba(0,255,255,0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: 10px;
-}
-.card h3 {
-  color: #fff;
-  font-size: 1rem;
-  margin: 0;
 }
 
 .card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 0 15px rgba(0, 255, 255, 0.6);
+  box-shadow: 0 0 18px rgba(0,255,255,0.4);
 }
-    input, textarea {
-      width: 100%;
-      background: #222;
-      color: #fff;
-      padding: 10px;
-      margin-top: 10px;
-      border: 1px solid #fff;
-      border-radius: 4px;
-    }
+
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-bottom: 12px;
+}
+
+.card h3 {
+  font-size: 1.2em;
+  margin: 10px 0;
+  color: #00ffff;
+}
+
+.card p {
+  font-size: 0.9em;
+  color: #ddd;
+  line-height: 1.6;
+}
     button {
       padding: 10px 20px;
       background: #fff;
@@ -100,6 +102,11 @@
       padding: 30px 10px;
       box-shadow: 0 -2px 10px #fff inset;
     }
+    button:hover {
+  background: #00ff99;
+  box-shadow: 0 0 12px rgba(0,255,255,0.6);
+  color: #111;
+}
     @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -143,9 +150,9 @@
   <h2 class="section-title">About Me</h2>
   <div class="card" style="background:#111; padding: 30px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,255,255,0.2); max-width: 800px; margin: auto;">
     <p style="font-size: 1.1em; line-height: 1.6; color: #ddd;">
-      I’m currently a student at <strong>Leyte Normal University</strong>, diving deep into web development and system design. I enjoy combining logic with creativity—especially on projects that aim for real-world impact. Whether I’m building backend systems or designing glowing UI effects, I approach every challenge methodically.
+      I’m currently a student at <strong>Leyte Normal University</strong>, diving deep into web development and system design. I enjoy combining logic with creativity—especially on projects that aim for real world impact. Whether I’m building backend systems or designing glowing UI effects, I approach every challenge methodically.
       <br><br>
-      One technique I rely on is <strong>pseudocode</strong>—it helps me map out ideas clearly before coding and has become essential to my problem-solving workflow. I’ve always been fascinated by what’s happening under the hood—from system-level programming to cybersecurity—and I find real meaning in creating tools that serve communities.
+      One technique I rely on is <strong>pseudocode</strong> it helps me map out ideas clearly before coding and has become essential to my problem-solving workflow. I’ve always been fascinated by what’s happening under the hood from system level programming and I find real meaning in creating tools that serve communities.
       <br><br>
       Recently, I’ve been building <strong>EcoTac</strong>, a Progressive Web App for environmental engagement, and <strong>ShopTech</strong>, an e-commerce system featuring secure login and dynamic cart functionality. These projects taught me to be both flexible and precise—balancing performance, user experience, and mission-driven design.
     </p>
@@ -202,25 +209,28 @@ To encourage consistent participation, EcoTac introduces a reward system where t
 </section>
 <section id="experience">
   <h2 class="section-title">Experience</h2>
+  <div class="grid">
 
-  <div class="card">
-    <h3>Independent Developer</h3>
-    <p>Created personal systems and creative tools</p>
-  </div>
+    <div class="card">
+      <h3 style="color: #00ffff; margin-bottom: 10px;">Independent Developer</h3>
+      <p>Built personal systems and creative tools using self-taught techniques across multiple languages and frameworks.</p>
+    </div>
 
-  <div class="card">
-    <h3>System Builder</h3>
-    <p>Login modules, cart logic, shutdown scripts</p>
-  </div>
+    <div class="card">
+      <h3 style="color: #00ffff; margin-bottom: 10px;">System Builder</h3>
+      <p>Designed backend systems like login modules, dynamic cart logic, and shutdown scripts for optimized performance.</p>
+    </div>
 
-  <div class="card">
-    <h3>Independent Learner</h3>
-    <p>Spending time on personal projects and picking up new skills through hands-on practice.</p>
-  </div>
+    <div class="card">
+      <h3 style="color: #00ffff; margin-bottom: 10px;">Independent Learner</h3>
+      <p>Focused on hands-on practice through personal projects—exploring pseudocode, cybersecurity, and system-level programming.</p>
+    </div>
 
-  <div class="card">
-    <h3>Freelance Developer</h3>
-    <p>Worked on Academic commissioned systems and research projects for clients. I provide detailed documentation, explain my code clearly, and always show proof to keep everything transparent and honest.</p>
+    <div class="card">
+      <h3 style="color: #00ffff; margin-bottom: 10px;">Freelance Developer</h3>
+      <p>Delivered commissioned systems and academic projects with full documentation, transparent process, and ethical standards.</p>
+    </div>
+
   </div>
 </section>
 
@@ -275,11 +285,19 @@ To encourage consistent participation, EcoTac introduces a reward system where t
 
 <section id="contact">
   <h2 class="section-title">Contact Me</h2>
-  <form id="contact-form" onsubmit="sendEmail(event)">
-    <input type="text" id="name" placeholder="Your Name" required />
-    <textarea id="message" rows="5" placeholder="Message" required></textarea>
-    <button type="submit">Send via Gmail</button>
+  <form id="contact-form" onsubmit="sendEmail(event)" style="max-width: 600px; margin: auto;">
+    <input type="text" id="name" placeholder="Your Name" required
+      style="width: 100%; padding: 12px; background: #222; border: 1px solid #00ffff; color: #fff; border-radius: 6px; margin-bottom: 15px;" />
+    
+    <textarea id="message" rows="5" placeholder="Message" required
+      style="width: 100%; padding: 12px; background: #222; border: 1px solid #00ffff; color: #fff; border-radius: 6px; margin-bottom: 15px;"></textarea>
+    
+    <button type="submit"
+      style="padding: 12px 24px; background: #00ffff; color: #000; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; transition: 0.3s;">
+      Send via Gmail
+    </button>
   </form>
+</section>
 
   <script>
     function sendEmail(event) {
