--- a/index.html
+++ b/index.html
@@ -50,18 +50,24 @@
   margin: auto;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 20px;
+  max-width: 900px;
+  margin: auto;
+  padding: 0 20px;
+}
+
 .card {
   background: #111;
-  padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 12px rgba(0,255,255,0.2);
+  padding: 16px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0,255,255,0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 0 18px rgba(0,255,255,0.4);
-}
 
 .card img {
   width: 100%;
@@ -187,24 +193,24 @@ To encourage consistent participation, EcoTac introduces a reward system where t
 <section id="tech">
   <h2 class="section-title">Tech Stack</h2>
 
-  <!-- Frontend Section -->
+  <!-- Frontend -->
   <h3 class="subheading">Frontend</h3>
   <div class="grid">
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/html-5.png" alt="HTML"><h3>HTML</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/css3.png" alt="CSS"><h3>CSS</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/javascript-logo.png" alt="JavaScript"><h3>JavaScript</h3></div>
-    <div class="card"><img src="https://img.icons8.com/officel/100/000000/react.png" alt="ReactJS"><h3>ReactJS</h3></div>
-    <div class="card"><img src="https://img.icons8.com/windows/100/ffffff/nextjs.png" alt="Next.js"><h3>Next.js</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/html-5.png" alt="HTML"><h3>HTML</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/css3.png" alt="CSS"><h3>CSS</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/javascript-logo.png" alt="JavaScript"><h3>JavaScript</h3></div>
+    <div class="card"><img src="https://img.icons8.com/officel/50/000000/react.png" alt="ReactJS"><h3>ReactJS</h3></div>
+    <div class="card"><img src="https://img.icons8.com/windows/50/ffffff/nextjs.png" alt="Next.js"><h3>Next.js</h3></div>
   </div>
 
-  <!-- Backend Section -->
+  <!-- Backend -->
   <h3 class="subheading">Backend</h3>
   <div class="grid">
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/php-logo.png" alt="PHP"><h3>PHP</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/sql.png" alt="SQL"><h3>SQL</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/nodejs.png" alt="Node.js"><h3>Node.js</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/java-coffee-cup-logo.png" alt="Java"><h3>Java</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/100/ffffff/python.png" alt="Python"><h3>Python</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/php-logo.png" alt="PHP"><h3>PHP</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/sql.png" alt="SQL"><h3>SQL</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/nodejs.png" alt="Node.js"><h3>Node.js</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/java-coffee-cup-logo.png" alt="Java"><h3>Java</h3></div>
+    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/python.png" alt="Python"><h3>Python</h3></div>
   </div>
 </section>
 <section id="experience">
