--- a/index.html
+++ b/index.html
@@ -113,6 +113,43 @@
   box-shadow: 0 0 12px rgba(0,255,255,0.6);
   color: #111;
 }
+    .section-title.glow, .subheading.glow {
+  color: #fff;
+  text-shadow: 0 0 10px #00f5ff;
+}
+
+.card {
+  background: #1a1a1a;
+  border-radius: 12px;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 0 8px rgba(0, 255, 255, 0.2);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px rgba(0, 255, 255, 0.6);
+}
+
+.tooltip::after {
+  content: attr(data-title);
+  position: absolute;
+  background: #111;
+  color: #0ff;
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 0.75rem;
+  white-space: nowrap;
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: 0.3s ease;
+}
+
+.tooltip:hover::after {
+  opacity: 1;
+  transform: translateY(-30px);
+}
     @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -190,27 +227,57 @@ To encourage consistent participation, EcoTac introduces a reward system where t
   </div>
 </section>
 
-<section id="tech">
-  <h2 class="section-title">Tech Stack</h2>
+<section id="tech" class="tech-stack">
+  <h2 class="section-title glow">Tech Stack</h2>
 
   <!-- Frontend -->
-  <h3 class="subheading">Frontend</h3>
-  <div class="grid">
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/html-5.png" alt="HTML"><h3>HTML</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/css3.png" alt="CSS"><h3>CSS</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/javascript-logo.png" alt="JavaScript"><h3>JavaScript</h3></div>
-    <div class="card"><img src="https://img.icons8.com/officel/50/000000/react.png" alt="ReactJS"><h3>ReactJS</h3></div>
-    <div class="card"><img src="https://img.icons8.com/windows/50/ffffff/nextjs.png" alt="Next.js"><h3>Next.js</h3></div>
+  <h3 class="subheading glow">Frontend</h3>
+  <div class="grid frontend">
+    <div class="card tooltip" data-title="Markup structure and semantics">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/html-5.png" alt="HTML">
+      <h3>HTML</h3>
+    </div>
+    <div class="card tooltip" data-title="Styling and layout design">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/css3.png" alt="CSS">
+      <h3>CSS</h3>
+    </div>
+    <div class="card tooltip" data-title="Interactivity and dynamic content">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/javascript-logo.png" alt="JavaScript">
+      <h3>JavaScript</h3>
+    </div>
+    <div class="card tooltip" data-title="Component-based UI with JSX">
+      <img src="https://img.icons8.com/officel/50/000000/react.png" alt="ReactJS">
+      <h3>ReactJS</h3>
+    </div>
+    <div class="card tooltip" data-title="Server-rendered React framework">
+      <img src="https://img.icons8.com/windows/50/ffffff/nextjs.png" alt="Next.js">
+      <h3>Next.js</h3>
+    </div>
   </div>
 
   <!-- Backend -->
-  <h3 class="subheading">Backend</h3>
-  <div class="grid">
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/php-logo.png" alt="PHP"><h3>PHP</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/sql.png" alt="SQL"><h3>SQL</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/nodejs.png" alt="Node.js"><h3>Node.js</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/java-coffee-cup-logo.png" alt="Java"><h3>Java</h3></div>
-    <div class="card"><img src="https://img.icons8.com/ios-filled/50/ffffff/python.png" alt="Python"><h3>Python</h3></div>
+  <h3 class="subheading glow">Backend</h3>
+  <div class="grid backend">
+    <div class="card tooltip" data-title="Server-side scripting">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/php-logo.png" alt="PHP">
+      <h3>PHP</h3>
+    </div>
+    <div class="card tooltip" data-title="Data storage and querying">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/sql.png" alt="SQL">
+      <h3>SQL</h3>
+    </div>
+    <div class="card tooltip" data-title="Event-driven server framework">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/nodejs.png" alt="Node.js">
+      <h3>Node.js</h3>
+    </div>
+    <div class="card tooltip" data-title="Strongly typed, scalable backend">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/java-coffee-cup-logo.png" alt="Java">
+      <h3>Java</h3>
+    </div>
+    <div class="card tooltip" data-title="Scripting and automation">
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/python.png" alt="Python">
+      <h3>Python</h3>
+    </div>
   </div>
 </section>
 <section id="experience">
