--- a/index.html
+++ b/index.html
@@ -192,13 +192,16 @@
 <section id="about">
   <h2 class="section-title">About Me</h2>
   <div class="card" style="background:#111; padding: 30px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,255,255,0.2); max-width: 800px; margin: auto;">
-    <p style="font-size: 1.1em; line-height: 1.6; color: #ddd;">
-      I’m currently a student at <strong>Leyte Normal University</strong>, diving deep into web development and system design. I enjoy combining logic with creativity—especially on projects that aim for real world impact. Whether I’m building backend systems or designing glowing UI effects, I approach every challenge methodically.
+ <p>
+      I’m a student at <strong>Leyte Normal University</strong> and I’m currently immersed in web development and system design. I like merging logic and creativity, especially on projects that aim to make a real difference. Whether I’m crafting backend services or adding subtle UI animations, I tackle every problem in a structured way.
       <br><br>
-      One technique I rely on is <strong>pseudocode</strong> it helps me map out ideas clearly before coding and has become essential to my problem-solving workflow. I’ve always been fascinated by what’s happening under the hood from system level programming and I find real meaning in creating tools that serve communities.
+      One practice I depend on is writing <strong>pseudocode</strong>. It lets me outline ideas in plain language before I touch real code, and it has become a cornerstone of my problem-solving routine. I’ve always been curious about what runs beneath the surface—even at the system level—and I find purpose in building tools that empower communities.
       <br><br>
-      Recently, I’ve been building <strong>EcoTac</strong>, a Progressive Web App for environmental engagement, and <strong>ShopTech</strong>, an e-commerce system featuring secure login and dynamic cart functionality. These projects taught me to be both flexible and precise—balancing performance, user experience, and mission-driven design.
+      Right now I’m developing <strong>EcoTac</strong>, a Progressive Web App to boost environmental engagement, alongside <strong>ShopTech</strong>, a secure e-commerce system with dynamic cart and authentication features. These projects have trained me to adapt while remaining detail-oriented, weighing performance, user experience, and a design that stays true to the mission.
     </p>
+
+
+
   </div>
 </section>
 
