--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
  <p>
       I’m a student at <strong>Leyte Normal University</strong> and I’m currently immersed in web development and system design. I like merging logic and creativity, especially on projects that aim to make a real difference. Whether I’m crafting backend services or adding subtle UI animations, I tackle every problem in a structured way.
       <br><br>
-      One practice I depend on is writing <strong>pseudocode</strong>. It lets me outline ideas in plain language before I touch real code, and it has become a cornerstone of my problem-solving routine. I’ve always been curious about what runs beneath the surface—even at the system level—and I find purpose in building tools that empower communities.
+      One practice I depend on is writing <strong>pseudocode</strong>. It lets me outline ideas in plain language before I touch real code, and it has become a cornerstone of my problem solving routine. I’ve always been curious about what runs beneath the surface even at the system level and I find purpose in building tools that empower communities.
       <br><br>
-      Right now I’m developing <strong>EcoTac</strong>, a Progressive Web App to boost environmental engagement, alongside <strong>ShopTech</strong>, a secure e-commerce system with dynamic cart and authentication features. These projects have trained me to adapt while remaining detail-oriented, weighing performance, user experience, and a design that stays true to the mission.
+      Right now I’m developing <strong>EcoTac</strong>, a Progressive Web App to boost environmental engagement, alongside <strong>ShopTech</strong>, a secure e-commerce system with dynamic cart and authentication features. These projects have trained me to adapt while remaining detail oriented, weighing performance, user experience, and a design that stays true to the mission.
     </p>
 
 
